[package]
name = "byond-crc32"
version = "0.1.0"
authors = ["Zac Stringham <zlstringham@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
quickcheck = "1.0"

[features]
default = ["std"]
std = []
